@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
-    <repositories>
-        <repository>
-            <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/yourfavDev/java-libraries</url>
-        </repository>
-    </repositories>
+
     <groupId>com.libraries</groupId>
     <artifactId>saas</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>saas</name>
     <description>saas</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
+    <repositories>
+        <repository>
+            <id>private-repo</id>
+            <name>GitHub Packages – java-libraries</name>
+            <url>https://maven.pkg.github.com/yourfavDev/java-libraries</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages – saas</name>
+            <url>https://maven.pkg.github.com/yourfavDev/saas</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <java.version>21</java.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -47,14 +53,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
-        <dependency>
-            <groupId>software.amazon.awssdk</groupId>
-            <artifactId>bom</artifactId>
-            <version>2.31.59</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -63,25 +63,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>sqs</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>3.5.3</version>
         </dependency>
-
-
         <dependency>
             <groupId>io.sentry</groupId>
             <artifactId>sentry-spring-boot-starter-jakarta</artifactId>
@@ -92,7 +87,6 @@
             <artifactId>sentry-spring</artifactId>
             <version>8.16.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.libraries</groupId>
             <artifactId>auth</artifactId>
@@ -121,43 +115,31 @@
                 <version>0.5.0</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <!-- for showing output of sentry-cli -->
                     <debugSentryCli>true</debugSentryCli>
-
                     <org>none-q3e</org>
-
                     <project>java-spring-boot</project>
-
-                    <!-- in case you're self hosting, provide the URL here -->
-                    <!--<url>http://localhost:8000/</url>-->
-
-                    <!-- provide your auth token via SENTRY_AUTH_TOKEN environment variable -->
                     <authToken>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</authToken>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <!--
-                            Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
-                            This enables source context, allowing you to see your source
-                            code as part of your stack traces in Sentry.
-                            -->
                             <goal>uploadSourceBundle</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
